--- a/index.html
+++ b/index.html
@@ -56,6 +56,11 @@
             <div>
                 <img src="./assets/puntacana.jpg" alt="amsterdam">
             </div>
+            <div>
+                <h2>
+                    henry
+                </h2>
+            </div>
         </section>
 
         <section class="home__section-images-TWO">
